--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -256,9 +256,11 @@ div.o-grid-footer .ng-star-inserted  .mat-button-wrapper{
   font-size: 14px;
   flex-direction: column;
   margin: 40px;
-  gap: 50px;
+  gap: 50px;  
+}
 
-  
+.slider {
+  margin-right: 200px;
 }
 
 .container_reviews{
