payment-home with css

--- a/frontend/src/app/main/payment/payment-home/payment-home.component.html
+++ b/frontend/src/app/main/payment/payment-home/payment-home.component.html
@@ -1,1 +1,54 @@
-<p>payment-home works!</p>
+<h1>WheGym suscripcion</h1>
+<p>
+    En WheGym, entendemos que cada persona tiene necesidades y metas diferentes, por lo que ofrecemos tres emocionantes tipos de membresía para adaptarse a tu estilo de vida y objetivos. ¡Descubre cuál es perfecto para ti!
+</p>
+<div class="container-text">
+    <div class="box-text1">
+        <h2 class="title-text1">Cuota Activa</h2>
+        <ol>
+            <li><i style="color: #0B374D;">✔</i> Sin comprometer tu presupuesto</li>
+            <li><i style="color: #0B374D;">✔</i> Acceso completo a los gimnasios</li>
+            <li><i style="color: #0B374D;">✔</i> ¡Las mañanas son tuyas!</li>
+        </ol>
+    </div>
+    <div class="box-text2">
+        <h2 class="title-text2">Cuota Vital</h2>
+        <ol>
+            <li><i style="color: #1286A8;">✔</i> Tu entrenamiento, tu horario</li>
+            <li><i style="color: #1286A8;">✔</i> Acceso completo a los gimnasios</li>
+            <li><i style="color: #1286A8;">✔</i> También de tardeo</li>
+        </ol>
+    </div>
+    <div class="box-text3">
+        <h2 class="title-text3">Cuota Integral</h2>
+        <ol>
+            <li><i style="color: #D2B53B;">✔</i> El límite lo pones tú</li>
+            <li><i style="color: #D2B53B;">✔</i> Acceso completo a los gimnasios</li>
+            <li><i style="color: #D2B53B;">✔</i> Horario ilimitado</li>
+        </ol>
+    </div>
+</div>
+<p>
+    En WheGym, creemos que la diversidad es clave, ¡así que elige la cuota que mejor se adapte a ti y comienza a alcanzar tus objetivos hoy mismo!
+</p>
+<ul>
+    <li style="--accent-color:#0B374D">
+        <div class="icon"><i class="fa fa-play" aria-hidden="true"></i></div>
+        <div class="title">Activa</div>
+        <div class="descr">19'99€</div>
+        <button (click)="openPaymentPage()" class="button-pay">acceder</button>
+    </li>
+    <li style="--accent-color:#1286A8">
+        <div class="icon"><i class="fa fa-forward" aria-hidden="true"></i></div>
+        <div class="title">Vital</div>
+        <div class="descr">27'99€</div>
+        <button (click)="openPaymentPage()" class="button-pay">acceder</button>
+    <li style="--accent-color:#D2B53B">
+        <div class="icon"><i class="fa fa-fast-forward" aria-hidden="true"></i></div>
+        <div class="title">Integral</div>
+        <div class="descr">49'99€</div>
+        <button (click)="openPaymentPage()" class="button-pay">acceder</button>
+    </li>
+    <!--  -->
+</ul>
+     
