--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -307,3 +307,7 @@ div.o-grid-footer .ng-star-inserted  .mat-button-wrapper{
 .o-container-scroll .o-scroll{
   overflow: hidden !important;
 }
+
+.container-payment {
+  position: relative;
+}
