payment access link

--- a/frontend/src/app/main/payment/payment-home/payment-home.component.html
+++ b/frontend/src/app/main/payment/payment-home/payment-home.component.html
@@ -1,4 +1,17 @@
 <h1>WheGym suscripcion</h1>
+<o-form #form attr="payment_detail" service="users" entity="user" fxLayout="column"
+show-header="no" header-actions="R;I;U;D" keys="user_" keys-sql-types="VARCHAR"
+show-header-navigation="no">
+
+    <!-- <o-row>
+      <o-text-input class="input-padding" attr="user_" width="375px" required="no" enabled="no"></o-text-input>
+      <o-text-input class="input-padding" attr="active" width="375px" required="no" enabled="no"></o-text-input>
+      <o-text-input class="input-padding" attr="renovationdate" width="375px" required="no" enabled="no"></o-text-input>
+    </o-row> -->
+  
+
+</o-form>
+
 <p>
     En WheGym, entendemos que cada persona tiene necesidades y metas diferentes, por lo que ofrecemos tres emocionantes tipos de membresía para adaptarse a tu estilo de vida y objetivos. ¡Descubre cuál es perfecto para ti!
 </p>
