--- a/frontend/src/app/main/payment/payment-home/payment-home.component.css
+++ b/frontend/src/app/main/payment/payment-home/payment-home.component.css
@@ -167,6 +167,8 @@ p {
     background-color: #0b374d21;
     padding: 12px 22px;
     margin-bottom: 18px;
+    box-shadow: 10px 10px 12px  #0b374dbc;
+ 
 }
 
 .box-text2 {
@@ -175,6 +177,7 @@ p {
   background-color: #1285a81e;
   padding: 12px 22px;
   margin-bottom: 18px;
+  box-shadow: 10px 10px 12px  #1285a8b7;
 }
 
 .box-text3 {
@@ -183,6 +186,7 @@ p {
   background-color: #d2b43b1b;
   padding: 12px 22px;
   margin-bottom: 18px;
+  box-shadow: 10px 10px 12px  #d2b43be2;
 }
 .button-pay {
     background-color: #b2006500;
