--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -293,6 +293,7 @@ div.o-grid-footer .ng-star-inserted  .mat-button-wrapper{
   position: absolute;
   bottom: 0px;
   right: 0px;
+  z-index: 10;
 }
 
 .o-form-toolbar .o-form-toolbar-header {
