payment successfull added

--- a/frontend/src/app/main/payment/payment-home/payment-home.component.html
+++ b/frontend/src/app/main/payment/payment-home/payment-home.component.html
@@ -53,18 +53,18 @@ show-header-navigation="no">
         <div class="icon"><i class="fa fa-play" aria-hidden="true"></i></div>
         <div class="title">Activa</div>
         <div class="descr">19'99€</div>
-        <button (click)="openPaymentPage()" class="button-pay">acceder</button>
+        <button (click)="openPaymentPage('active')" class="button-pay">acceder</button>
     </li>
     <li style="--accent-color:#1286A8">
         <div class="icon"><i class="fa fa-forward" aria-hidden="true"></i></div>
         <div class="title">Vital</div>
         <div class="descr">27'99€</div>
-        <button (click)="openPaymentPage()" class="button-pay">acceder</button>
+        <button (click)="openPaymentPage('vital')" class="button-pay">acceder</button>
     <li style="--accent-color:#D2B53B">
         <div class="icon"><i class="fa fa-fast-forward" aria-hidden="true"></i></div>
         <div class="title">Integral</div>
         <div class="descr">49'99€</div>
-        <button (click)="openPaymentPage()" class="button-pay">acceder</button>
+        <button (click)="openPaymentPage('integral')" class="button-pay">acceder</button>
     </li>
     <!--  -->
 </ul>
