--- a/frontend/src/app/main/profiles/profile/profile.component.html
+++ b/frontend/src/app/main/profiles/profile/profile.component.html
@@ -6,7 +6,7 @@ show-header-navigation="yes" (onDataLoaded)="formInit()">
   <o-column title="USER_PROFILE"  class="login-column">
     <o-row>   
       <o-text-input class="input-padding" attr="user_"  required="yes" width="180px" read-only="yes" (input)="onInputChanged()"></o-text-input>
-      <o-slide-toggle color= "primary" id="activeid" style="display: none;" class="input-padding" attr="active" label="{{ 'active' | oTranslate }}" [data]="getValue()" read-only="no" (input)="onInputChanged()"
+      <o-slide-toggle color= "primary" id="activeid" style="display: none;" class="input-padding" attr="active" label="{{ 'active' | oTranslate }}" [data]="getValue()" read-only="yes" (input)="onInputChanged()"
       ></o-slide-toggle>
     </o-row>
     <o-row>
